--- a/assets/mycss.css
+++ b/assets/mycss.css
@@ -1,4 +1,10 @@
-
+body {
+font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
+/* default is 1rem or 16px */
+font-size: 12px;
+font-weight: 400;
+/*line-height: 1.5;*/
+}
 
 .dash-table-container .row {
   display: block;
