--- a/assets/mycss.css
+++ b/assets/mycss.css
@@ -1,7 +1,18 @@
+/*********   change image sizes in markdown ************/
+img[src*="#thumbnail"] {
+   width:100px;
+   height:100px;
+}
+img[src*="#gauge"] {
+   width:175px;
+   height:450px;
+}
+
+/******  changes font size for whole app  *****/
 body {
 font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
 /* default is 1rem or 16px */
-font-size: 14px;
+font-size: 16px;
 font-weight: 400;
 /*line-height: 1.5;*/
 }
